made some more styling changes. need to work on layout of article pages. corrected spacing of nav and topimg. soooo close

--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,9 @@ $heading-font-color:#575841;*/
   font-weight: normal;
   color: #555555; }
 
+#photoBlock {
+  margin: 0 auto; }
+
 * {
   box-sizing: border-box; }
 
@@ -581,7 +584,8 @@ nav {
 
 .brand {
   height: 70px;
-  margin: 5px; }
+  margin: 5px;
+  max-width: 98%; }
 
 .miniBrand {
   height: 30px;
@@ -610,6 +614,12 @@ nav {
       display: flex;
       flex-direction: row;
       justify-content: space-around; } }
+  @media (min-width: 970px) {
+    .nav ul {
+      width: 90%; } }
+  @media (min-width: 1200px) {
+    .nav ul {
+      width: 80%; } }
 
 .navLink {
   text-align: center;
@@ -703,7 +713,10 @@ nav {
   border-bottom: solid 0.25rem #f6ae2d;
   border-top: solid 0.25rem #f6ae2d;
   display: block;
-  margin-bottom: 160px; }
+  margin-bottom: 0; }
+  @media (min-width: 475px) {
+    #topImg {
+      margin-bottom: 160px; } }
   #topImgDiv {
     width: 100%;
     height: 200px;
