--- a/scss/sections/_navBrand.scss
+++ b/scss/sections/_navBrand.scss
@@ -21,6 +21,7 @@
 		.brand{
 			height:$brand-height;
 			margin:5px;
+			max-width: 98%;
 		}
 
 		.miniBrand{
@@ -56,6 +57,12 @@
 				display: flex;
 				flex-direction: row;
 				justify-content: space-around;
+			}
+			@media(min-width: $bp-medium){
+				width:90%;
+			}
+			@media(min-width: $bp-large){
+				width:80%;
 			}
 		}
 
