--- a/scss/utilities/_overrides.scss
+++ b/scss/utilities/_overrides.scss
@@ -43,3 +43,8 @@
     font-weight: normal;
     color: #555555;
 }
+
+// center fotorama block-----------------------------------
+#photoBlock{
+    margin:0 auto;
+}
